# backend/api/models/person.go
@@ -1,0 +1,9 @@
+package models
+
+type Person struct {
+	ID     string `json:"id"`
+	Name   string `json:"name"`
+	CPF    string `json:"cpf"`
+	Role   string `json:"role"`
+	Active bool   `json:"active"`
+}
